Fix transitioning slides too wide in editor
* Remove position: relative, it doesn't seem to do anything on the front
end either.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -278,7 +278,6 @@ $medium-image-height: 600px;
       z-index: 1000;
       display: block;
       opacity: 1;
-      position: relative;
 
       .carousel-caption .main-header .carousel-captions-wrapper {
         h1, p {
@@ -298,7 +297,6 @@ $medium-image-height: 600px;
       z-index: 1000;
       display: block;
       opacity: 1;
-      position: relative;
 
       .carousel-caption .main-header .carousel-captions-wrapper {
         h1, p {
